[package]
name = "turn-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
stun-rs = { version = "0.1.9", features = ["turn"] }
log = "0.4"
lazy_static = "1.4"
env_logger = "0.10"
bytes = "1.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"
ipnetwork = "0.20"
byteorder = "1.4"
tempfile = "3.2"
serde_json = "1.0"


